; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-cred.c_crgetngroups.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-cred.c_crgetngroups.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.group_info* }
%struct.group_info = type { i32 }

@NGROUPS_PER_BLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crgetngroups(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.group_info*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load %struct.group_info*, %struct.group_info** %6, align 8
  store %struct.group_info* %7, %struct.group_info** %3, align 8
  %8 = load %struct.group_info*, %struct.group_info** %3, align 8
  %9 = getelementptr inbounds %struct.group_info, %struct.group_info* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @NGROUPS_PER_BLOCK, align 4
  %13 = icmp sgt i32 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = call i32 @WARN_ON_ONCE(i32 1)
  %16 = load i32, i32* @NGROUPS_PER_BLOCK, align 4
  store i32 %16, i32* %4, align 4
  br label %17

17:                                               ; preds = %14, %1
  %18 = load i32, i32* %4, align 4
  ret i32 %18
}

declare dso_local i32 @WARN_ON_ONCE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
